# harken

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: api-reference.md  architecture.md  design-notes.md  usage.md
examples/basic_qa/: README.md  run.py
examples/evaluate_aqua/: README.md  run.py  sample.jsonl
harken/: __init__.py  audio_io.py  chunking.py  cli.py  config.py  constants.py  data.py  exceptions.py  features.py  modeling.py  processor.py  projectors.py  prompts.py  registry.py  templates.py  testing.py  utils.py
harken/encoders/: __init__.py  ast.py  base.py  clap.py  dummy.py  whisper.py
harken/evaluation/: __init__.py  metrics.py  runner.py
tests/: conftest.py  test_audio_io.py  test_chunking.py  test_cli.py  test_config.py  test_data.py  test_encoder_imports.py  test_encoders.py  test_features.py  test_integration.py  test_metrics.py  test_modeling.py  test_processor.py  test_projectors.py  test_prompts.py  test_registry.py  test_templates.py  test_utils.py  test_version.py
