[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harken"
description = "Connect pretrained audio encoders to LLMs for audio question answering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]
