[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harken"
description = "Connect pretrained audio encoders to LLMs for audio question answering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mingyan Yang" }]
keywords = [
    "audio",
    "question-answering",
    "large-language-models",
    "multimodal",
    "speech",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "soundfile>=0.12",
]
dynamic = ["version"]

[project.optional-dependencies]
# Pretrained encoders / LLMs from the Hugging Face ecosystem.
hf = ["transformers>=4.40", "torchaudio>=2.0"]
# Higher-quality audio I/O and resampling.
audio = ["librosa>=0.10", "resampy>=0.4"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.scripts]
harken = "harken.cli:main"

[project.urls]
Homepage = "https://github.com/hazelp343/harken"
Repository = "https://github.com/hazelp343/harken"
Issues = "https://github.com/hazelp343/harken/issues"

[tool.setuptools]
packages = ["harken", "harken.encoders", "harken.evaluation"]

[tool.setuptools.dynamic]
version = { attr = "harken._version.__version__" }

[tool.setuptools.package-data]
harken = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["harken", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
