[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harken"
description = "Connect pretrained audio encoders to LLMs for audio question answering"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mingyan Yang" }]
keywords = [
    "audio",
    "question-answering",
    "large-language-models",
    "multimodal",
    "speech",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "soundfile>=0.12",
]
dynamic = ["version"]

[project.optional-dependencies]
# Pretrained encoders / LLMs from the Hugging Face ecosystem.
hf = ["transformers>=4.40", "torchaudio>=2.0"]
# Higher-quality audio I/O and resampling.
audio = ["librosa>=0.10", "resampy>=0.4"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.5",
]

[project.scripts]
harken = "harken.cli:main"

[project.urls]
Homepage = "https://github.com/hazelp343/harken"
Repository = "https://github.com/hazelp343/harken"
Issues = "https://github.com/hazelp343/harken/issues"

[tool.setuptools]
packages = ["harken", "harken.encoders", "harken.evaluation"]

[tool.setuptools.dynamic]
version = { attr = "harken._version.__version__" }

[tool.setuptools.package-data]
harken = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["harken", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
files = ["harken"]

[[tool.mypy.overrides]]
module = ["soundfile", "resampy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "slow: tests that download or run heavyweight pretrained models",
]

[tool.coverage.run]
source = ["harken"]
branch = true
omit = ["harken/cli.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
